--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,18 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>社群登入</title>
+    <title>Weego 社群登入</title>
 </head>
 <body>
-    <h2>社群登入</h2>
+    <h2>Weego 社群登入系統</h2>
     <form th:action="@{/login}" method="post">
         <div>
             <label for="username">手機號碼:</label>
             <input type="text" id="username" name="username" required>
         </div>
         <div>
-            <input type="submit" value="Login">
+            <input type="submit" value="登入">
+            <!--<a href="/api/index">登入</a>-->
         </div>
+    </form>
+    <form th:action="@{/register}" method="get">
+        <button type="submit">註冊</button>
     </form>
 </body>
 </html>
