--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -5,14 +5,15 @@
     <title>Weego 社群實作</title>
 </head>
 <body>
-    <h2>Weego社群註冊</h2>
+    <h2>Weego 社群註冊系統</h2>
     <form th:action="@{/register}" method="post">
         <div>
             <label for="username">手機號碼:</label>
             <input type="text" id="username" name="username" required>
         </div>
         <div>
-            <input type="submit" value="Register">
+            <input type="submit" value="註冊">
+            <!--<a href="/api/login">註冊</a>-->
         </div>
     </form>
 </body>
